test/libsolidity/syntaxTests/parsing/address_public_payable_error.sol
contract C {
    address public payable a;
}
// ----
// ParserError 2314: (32-39): Expected identifier but got 'payable'
